// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should hide logout button when no password is set 1`] = `
<DocumentFragment>
  <div
    class="navbar mb-4 shadow-lg bg-primary text-neutral-content rounded-box flex-wrap xs:flex-nowrap"
  >
    <div
      class="navbar-start"
    >
      <a
        class="btn btn-outline btn-accent"
        href="/"
      >
        zurück
      </a>
    </div>
    <div
      class="px-2 mx-2 navbar-center w-full xs:w-auto order-first xs:order-none justify-center"
    >
      <span
        class="text-lg sm:text-3xl sm:font-thin"
      >
        SimpleVolumeControl
      </span>
    </div>
    <div
      class="navbar-end"
    />
  </div>
</DocumentFragment>
`;

exports[`Header should render correctly on home page 1`] = `
<DocumentFragment>
  <div
    class="navbar mb-4 shadow-lg bg-primary text-neutral-content rounded-box flex-wrap xs:flex-nowrap"
  >
    <div
      class="navbar-start"
    />
    <div
      class="px-2 mx-2 navbar-center w-full xs:w-auto order-first xs:order-none justify-center"
    >
      <span
        class="text-lg sm:text-3xl sm:font-thin"
      >
        SimpleVolumeControl
      </span>
    </div>
    <div
      class="navbar-end"
    />
  </div>
</DocumentFragment>
`;

exports[`Header should render correctly on other pages 1`] = `
<DocumentFragment>
  <div
    class="navbar mb-4 shadow-lg bg-primary text-neutral-content rounded-box flex-wrap xs:flex-nowrap"
  >
    <div
      class="navbar-start"
    >
      <a
        class="btn btn-outline btn-accent"
        href="/"
      >
        zurück
      </a>
    </div>
    <div
      class="px-2 mx-2 navbar-center w-full xs:w-auto order-first xs:order-none justify-center"
    >
      <span
        class="text-lg sm:text-3xl sm:font-thin"
      >
        SimpleVolumeControl
      </span>
    </div>
    <div
      class="navbar-end"
    />
  </div>
</DocumentFragment>
`;
